--- a/puntoblanco/templates/base.html
+++ b/puntoblanco/templates/base.html
@@ -85,13 +85,15 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"> {{ name }} </a>
+            <a class="navbar-brand" href="/"> {{ name }} </a>
           </div>
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li class="{{ start_active }}"><a href="/">Inicio</a></li>
+              <li class="{{ order_active }}"><a href="/order/">Pedidos</a></li>
+              <li class="{{ user_active }}"><a href="/user/">Usuarios</a></li>
+              <li class="{{ admin_active }}"><a href="/admin/">Administración</a></li>
+              <!--
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                 <ul class="dropdown-menu">
@@ -104,6 +106,7 @@
                   <li><a href="#">One more separated link</a></li>
                 </ul>
               </li>
+              -->
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -127,11 +130,15 @@
     {% endblock %}
     </div>
 
+    {% block scripts %}
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     
     <script src="/static/js/bootstrap.min.js"></script>
-    {% endblock body %}
+    
+    {% endblock scripts %}
+    
+    {% endblock body %}    
   </body>
 </html>
